--- a/templates/news.html
+++ b/templates/news.html
@@ -19,16 +19,17 @@
       <div class="row">
         {% for item in news_list %}
         <div class="col-md-12 col-lg-4">
-          <div class="blog-card">
+          <div class="blog-card" >
             <div class="blog-card__image">
-              <img
+              <img onerror="this.src='https://media.istockphoto.com/photos/tractor-spraying-soybean-field-picture-id506164764?b=1&k=20&m=506164764&s=170667a&w=0&h=Jape5dTdB-8HNjQFjc6aJODc_XQTqTwxGN4j0-j-Icg='" id="image"
                 src="{{ item.img }}"
                 alt="Best Way to Do Eco and Agriculture"
+                style="height:150px;width:100%"
               />
               <a href="blog-details.html"></a>
             </div>
             <div class="blog-card__content">
-              <div class="blog-card__date">18 Nov</div>
+              <div class="blog-card__date">{{item.date}}</div>
               <!-- <div class="blog-card__meta">
     <a href="blog-details.html"><i class="far fa-user-circle"></i> by Admin</a>
     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
@@ -45,5 +46,13 @@
     </div>
   </div>
 </section>
+<script>
+// js file
 
+const img = document.getElementsByTagName("img")
+img.addEventListener("error", function(event) {
+  event.target.src = "https://media.istockphoto.com/photos/tractor-spraying-soybean-field-picture-id506164764?b=1&k=20&m=506164764&s=170667a&w=0&h=Jape5dTdB-8HNjQFjc6aJODc_XQTqTwxGN4j0-j-Icg="
+  event.onerror = null
+})
+</script>
 {% endblock content %}
